//
// Copyright 2018, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//

syntax = "proto3";

package javaclasses.exlibris.c;

import "spine/options.proto";

option (type_url_prefix) = "type.javaclasses.exlibris";
option java_package = "javaclasses.exlibris.c.rejection";
option java_outer_classname = "Rejections";
option java_multiple_files = false;
option java_generate_equals_and_hash = true;

import "google/protobuf/timestamp.proto";
import "javaclasses/exlibris/identifiers.proto";
import "javaclasses/exlibris/values.proto";

// Rejection when a librarian tries to add an existing book.
//
message BookAlreadyExists {

    // The identifier of a book.
    BookId book_id = 1 [(required) = true];

    // The DTO of a book title.
    BookTitle book_title = 2 [(required) = true];

    // Who tried to add a book.
    UserId librarian_id = 3 [(required) = true];

    // The time when a librarian tried to add an existing book.
    google.protobuf.Timestamp when_rejected = 4 [(required) = true];
}

// Rejection when a librarian tries to remove a missing book.
//
message CannotRemoveMissingBook {

    // The identifier of a book.
    BookId book_id = 1 [(required) = true];

    // Who tried to remove a book.
    UserId user_id = 2 [(required) = true];

    // The time when a librarian tried to remove a missing book.
    google.protobuf.Timestamp when_rejected = 3 [(required) = true];
}

// Rejection when a librarian tries to update a missing book.
//
message CannotUpdateMissingBook {

    // The identifier of a book.
    BookId book_id = 1 [(required) = true];

    // Who tried to update a book.
    UserId librarian_id = 2 [(required) = true];

    // The time when a librarian tried to update a missing book.
    google.protobuf.Timestamp when_rejected = 3 [(required) = true];
}

// Rejection when a user tries to borrow non-available book.
//
message NonAvailableBook {

    // The identifier of an inventory.
    InventoryId inventory_id = 1 [(required) = true];

    // The item that a user tried to borrow.
    InventoryItemId inventory_item_id = 2 [(required) = true];

    // Who tried to borrow a book.
    UserId user_id = 3 [(required) = true];

    // The time when a user tried to borrow a book.
    google.protobuf.Timestamp when_rejected = 4 [(required) = true];
}

// Rejection when a user tries to reserve a book that he already reserved.
//
message BookAlreadyReserved {

    // The identifier of an inventory.
    InventoryId inventory_id = 1 [(required) = true];

    // Who tried to reserve a book.
    UserId user_id = 2 [(required) = true];

    // The time when a user tried to reserve a book.
    google.protobuf.Timestamp when_rejected = 3 [(required) = true];
}

// Rejection when a user tries to reserve a book that he borrowed by himself.
//
message BookAlreadyBorrowed {

    // The identifier of an inventory.
    InventoryId inventory_id = 1 [(required) = true];

    // Who tried to reserve a book.
    UserId user_id = 2 [(required) = true];

    // The time when a user tried to reserve a book.
    google.protobuf.Timestamp when_rejected = 3 [(required) = true];
}

// Rejection when a user tries to reserve a book that is available to borrow.
//
message CannotReserveAvailableBook {

    // The identifier of an inventory.
    InventoryId inventory_id = 1 [(required) = true];

    // Who tried to reserve a book.
    UserId user_id = 2 [(required) = true];

    // The time when a user tried to borrow a book.
    google.protobuf.Timestamp when_rejected = 3 [(required) = true];
}

// Rejection when a user tries to extend a loan period and a book is already reserved by another user.
//
message CannotExtendLoanPeriod {

    // The identifier of an inventory.
    InventoryId inventory_id = 1 [(required) = true];

    // The loan identifier.
    LoanId loan_id = 2 [(required) = true];

    // Who tried to extend loan period.
    UserId user_id = 3 [(required) = true];

    // The time when user tried to extend loan period.
    google.protobuf.Timestamp when_rejected = 4 [(required) = true];
}

// Rejection when a user tries to return a non-borrowed book.
//
message CannotReturnNonBorrowedBook {

    // The identifier of an inventory.
    InventoryId inventory_id = 1 [(required) = true];

    // The item that a user tried to return.
    InventoryItemId inventory_item_id = 2 [(required) = true];

    // Who tried to return a book.
    UserId user_id = 3 [(required) = true];

    // The time when user tried to return the book.
    google.protobuf.Timestamp when_rejected = 4 [(required) = true];
}

// Rejection when a user tries to return the missing `InventoryItem`.
//
message CannotReturnMissingBook {

    // The identifier of an inventory.
    InventoryId inventory_id = 1 [(required) = true];

    // The item that a user tried to return.
    InventoryItemId inventory_item_id = 2 [(required) = true];

    // Who tried to return the book.
    UserId user_id = 3 [(required) = true];

    // The time when user tried to return the book.
    google.protobuf.Timestamp when_rejected = 4 [(required) = true];
}

// Rejection when a user tries to cancel a missing reservation.
//
message CannotCancelMissingReservation {

    // The identifier of an inventory.
    InventoryId inventory_id = 1 [(required) = true];

    // Who tried to cancel the reservation.
    UserId user_id = 2 [(required) = true];

    // The time when user tried to cancel the reservation.
    google.protobuf.Timestamp when_rejected = 3 [(required) = true];
}

// Rejection when a librarian tries to write a missing book off.
//
message CannotWriteBookOff {

    // The identifier of an inventory.
    InventoryId inventory_id = 1 [(required) = true];

    // Who tried to write missing book off.
    UserId librarian_id = 2 [(required) = true];

    // The inventory item identifier.
    InventoryItemId inventory_item_id = 3 [(required) = true];

    // The time when user tried to write missing book off.
    google.protobuf.Timestamp when_rejected = 4 [(required) = true];
}

// Rejection when a user tries to borrow or return book with not valid token.
//
message ThereIsNoItemForThisToken {

    // The hashed part of the URL to recognize an inventory item.
    InventoryItemRecognizeToken token = 1;

    // Who tried to return or borrow a book.
    UserId user_id = 2 [(required) = true];

    // The time when a user tried to borrow or terun a book.
    google.protobuf.Timestamp when_rejected = 3 [(required) = true];
}
